Closing Preferences Panel crashes Blender #83420

Closed
opened 2020-12-05 04:19:00 +01:00 by Wykrhm Reddy · 17 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-04 20:46, hash: ea37e4ea5a
Worked: 2.90.1, 2.91.0

Short description of error
Closing the Preferences dialog box crashes the application. This also makes installation of addons not possible.

Exact steps for others to reproduce the error

  • Download the startup.blend file and set it as startup file for your Blender
  • Start Blender and open the preferences

Close the preferences

Blender will crash

  • Download the startup.blend file and set it as startup file for your Blender
  • Start Blender and open the preferences

Try to install an add-on

Blender will crash

startup.blend

Stack trace:
blender.exe         :0x00007FF66629AA70  outliner_id_remap
blender.exe         :0x00007FF669640DF0  ED_spacedata_id_remap
blender.exe         :0x00007FF665A52E90  WM_main_remap_editor_id_reference
blender.exe         :0x00007FF6658D5AB0  BKE_id_free_ex
blender.exe         :0x00007FF6658E4AC0  BKE_workspace_layout_remove
blender.exe         :0x00007FF665A49DC0  wm_window_close
blender.exe         :0x00007FF665A49090  ghost_event_proc
blender.exe         :0x00007FF666392E30  GHOST_CallbackEventConsumer::processEvent
blender.exe         :0x00007FF66639B020  GHOST_EventManager::dispatchEvents
blender.exe         :0x00007FF66639BE00  GHOST_System::dispatchEvents
blender.exe         :0x00007FF665A4AF10  wm_window_process_events
blender.exe         :0x00007FF665A41170  WM_main
blender.exe         :0x00007FF665739920  main
blender.exe         :0x00007FF669C0BE48  __scrt_common_main_seh
KERNEL32.DLL        :0x00007FFB19E36FC0  BaseThreadInitThunk
ntdll.dll           :0x00007FFB1A13CEA0  RtlUserThreadStart
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-04 20:46, hash: `ea37e4ea5a` Worked: 2.90.1, 2.91.0 **Short description of error** Closing the Preferences dialog box crashes the application. This also makes installation of addons not possible. **Exact steps for others to reproduce the error** - Download the startup.blend file and set it as startup file for your Blender - Start Blender and open the preferences # Close the preferences Blender will crash - Download the startup.blend file and set it as startup file for your Blender - Start Blender and open the preferences # Try to install an add-on Blender will crash [startup.blend](https://archive.blender.org/developer/F9478372/startup.blend) ``` Stack trace: blender.exe :0x00007FF66629AA70 outliner_id_remap blender.exe :0x00007FF669640DF0 ED_spacedata_id_remap blender.exe :0x00007FF665A52E90 WM_main_remap_editor_id_reference blender.exe :0x00007FF6658D5AB0 BKE_id_free_ex blender.exe :0x00007FF6658E4AC0 BKE_workspace_layout_remove blender.exe :0x00007FF665A49DC0 wm_window_close blender.exe :0x00007FF665A49090 ghost_event_proc blender.exe :0x00007FF666392E30 GHOST_CallbackEventConsumer::processEvent blender.exe :0x00007FF66639B020 GHOST_EventManager::dispatchEvents blender.exe :0x00007FF66639BE00 GHOST_System::dispatchEvents blender.exe :0x00007FF665A4AF10 wm_window_process_events blender.exe :0x00007FF665A41170 WM_main blender.exe :0x00007FF665739920 main blender.exe :0x00007FF669C0BE48 __scrt_common_main_seh KERNEL32.DLL :0x00007FFB19E36FC0 BaseThreadInitThunk ntdll.dll :0x00007FFB1A13CEA0 RtlUserThreadStart ```
Author

Added subscriber: @Wyk

Added subscriber: @Wyk
Author

Update: Not just preferences. Literally any dialog box crashes the whole app.

Repro Steps:

  1. Import Model.
  2. Crash.
Update: Not just preferences. Literally any dialog box crashes the whole app. Repro Steps: 1. Import Model. 2. Crash.

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Please open Blender's installation directory and double click on the blender_debug_gpu.cmd. This will start Blender in debug mode and create log files. Try to make Blender crash again. Once it crashes the Windows Explorer should open and show you up to two files, a debug log and the system information. Add them to your bug report by clicking on the upload button as shown in the screenshot below or via drag and drop. Please also upload the crash log located in C:\Users\[your username]\AppData\Local\Temp\[project name].crash.txt (or simply type %TEMP% into the path bar of the Windows Explorer).

2019_12_04_upload_icon_developer_blender_org.png

Please open Blender's installation directory and double click on the `blender_debug_gpu.cmd`. This will start Blender in debug mode and create log files. Try to make Blender crash again. Once it crashes the Windows Explorer should open and show you up to two files, a debug log and the system information. Add them to your bug report by clicking on the upload button as shown in the screenshot below or via drag and drop. Please also upload the crash log located in `C:\Users\[your username]\AppData\Local\Temp\[project name].crash.txt` (or simply type `%TEMP%` into the path bar of the Windows Explorer). ![2019_12_04_upload_icon_developer_blender_org.png](https://archive.blender.org/developer/F8190038/2019_12_04_upload_icon_developer_blender_org.png)
Author
[blender_system_info.txt](https://archive.blender.org/developer/F9478296/blender_system_info.txt) [blender.crash.txt](https://archive.blender.org/developer/F9478295/blender.crash.txt) [blender_debug_output.txt](https://archive.blender.org/developer/F9478294/blender_debug_output.txt)

@Wyk Thank you for the quick reply. There are multiple warning in your debug log from an add-on.

read file C:\Users\<<username>>\AppData\Roaming\Blender Foundation\Blender\2.92\config\startup.blend
  Version 292 sub 0 date 2020-10-22 07:48 hash 6c178bf439d5
Warning: class MESH_OT_add_isosurf contains a property which should be an annotation!
    assign as a type annotation: MESH_OT_add_isosurf.scale
Warning: class OP_OT_isosurfer_item_add contains a property which should be an annotation!
    assign as a type annotation: OP_OT_isosurfer_item_add.add
Warning: class IsoSurf contains a property which should be an annotation!
    assign as a type annotation: IsoSurf.active
    assign as a type annotation: IsoSurf.id
    assign as a type annotation: IsoSurf.obj
    assign as a type annotation: IsoSurf.psys
    assign as a type annotation: IsoSurf.sizem
    assign as a type annotation: IsoSurf.weight
read file 
  Version 283 sub 8 date 2020-03-12 14:53 hash 63ee3db96107
read file 
  Version 282 sub 7 date 2020-02-12 16:20 hash 77d23b0bd76f
Writing: D:\Desktop D\Temp Stuff\Blender Projects\_Temp\blender.crash.txt

Please make a copy C:\Users\[your username]\AppData\Roaming\Blender Foundation\Blender\2.92 to avoid accidental overwriting of your preferences. Open Blender's installation directory and double click on the blender_factory_startup.cmd. The will start Blender with temporary factory defaults. Try to reproduce the crash.

@Wyk Thank you for the quick reply. There are multiple warning in your debug log from an add-on. ``` read file C:\Users\<<username>>\AppData\Roaming\Blender Foundation\Blender\2.92\config\startup.blend Version 292 sub 0 date 2020-10-22 07:48 hash 6c178bf439d5 Warning: class MESH_OT_add_isosurf contains a property which should be an annotation! assign as a type annotation: MESH_OT_add_isosurf.scale Warning: class OP_OT_isosurfer_item_add contains a property which should be an annotation! assign as a type annotation: OP_OT_isosurfer_item_add.add Warning: class IsoSurf contains a property which should be an annotation! assign as a type annotation: IsoSurf.active assign as a type annotation: IsoSurf.id assign as a type annotation: IsoSurf.obj assign as a type annotation: IsoSurf.psys assign as a type annotation: IsoSurf.sizem assign as a type annotation: IsoSurf.weight read file Version 283 sub 8 date 2020-03-12 14:53 hash 63ee3db96107 read file Version 282 sub 7 date 2020-02-12 16:20 hash 77d23b0bd76f Writing: D:\Desktop D\Temp Stuff\Blender Projects\_Temp\blender.crash.txt ``` Please make a copy `C:\Users\[your username]\AppData\Roaming\Blender Foundation\Blender\2.92` to avoid accidental overwriting of your preferences. Open Blender's installation directory and double click on the `blender_factory_startup.cmd`. The will start Blender with temporary factory defaults. Try to reproduce the crash.
Author

Hello Robert,

Thank you for the quick response. I noticed those warnings. They are pretty old and have never caused any problem so far. Either way, I fixed the errors with the addons and the crash still persists across any dialog window. I ran with default factory settings and there was no crash.

I figured what the issue is though. It's the startup blend file. For some reason it has issues now all of a sudden since the last build. Using a fresh startup.blend works properly. Guess I'll just have to redo my startup file now.

Hello Robert, Thank you for the quick response. I noticed those warnings. They are pretty old and have never caused any problem so far. Either way, I fixed the errors with the addons and the crash still persists across any dialog window. I ran with default factory settings and there was no crash. I figured what the issue is though. It's the startup blend file. For some reason it has issues now all of a sudden since the last build. Using a fresh startup.blend works properly. Guess I'll just have to redo my startup file now.

@Wyk Could you please share your startup and userpref file? Generally it shouldn't crash Blender.

@Wyk Could you please share your startup and userpref file? Generally it shouldn't crash Blender.
Author

Yes. I find that weird too. The userprefs is okay from my testing. It's the startup.blend that was causing the issue. Replacing it with a new one fixed the crash. Either way, I uploaded both of them for you to give it a go.
startup.blend

userpref.blend

Yes. I find that weird too. The userprefs is okay from my testing. It's the startup.blend that was causing the issue. Replacing it with a new one fixed the crash. Either way, I uploaded both of them for you to give it a go. [startup.blend](https://archive.blender.org/developer/F9478372/startup.blend) [userpref.blend](https://archive.blender.org/developer/F9478371/userpref.blend)

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm the issue with the startup.blend. The space_outliner->runtime is NULL in outliner_id_remap, which results in a crash.

outliner_id_remap(ScrArea * UNUSED_area, SpaceLink * slink, ID * old_id, ID * new_id) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/space_outliner/space_outliner.c:417)
ED_spacedata_id_remap(struct ScrArea * area, struct SpaceLink * sl, ID * old_id, ID * new_id) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/util/ed_util.c:480)
WM_main_remap_editor_id_reference(ID * old_id, ID * new_id) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:302)
BKE_id_free_ex(Main * bmain, void * idv, int flag, const _Bool use_flag_from_idtag) (/home/dev/01-data/01-git/blender-git/blender/source/blender/blenkernel/intern/lib_id_delete.c:172)
BKE_id_free(Main * bmain, void * idv) (/home/dev/01-data/01-git/blender-git/blender/source/blender/blenkernel/intern/lib_id_delete.c:203)
BKE_workspace_layout_remove(Main * bmain, WorkSpace * workspace, WorkSpaceLayout * layout) (/home/dev/01-data/01-git/blender-git/blender/source/blender/blenkernel/intern/workspace.c:388)
wm_window_close(bContext * C, wmWindowManager * wm, wmWindow * win) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_window.c:456)
ghost_event_proc(GHOST_EventHandle evt, GHOST_TUserDataPtr C_void_ptr) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_window.c:1311)
GHOST_CallbackEventConsumer::processEvent(GHOST_CallbackEventConsumer * const this, GHOST_IEvent * event) (/home/dev/01-data/01-git/blender-git/blender/intern/ghost/intern/GHOST_CallbackEventConsumer.cpp:41)
GHOST_EventManager::dispatchEvent(GHOST_EventManager * const this, GHOST_IEvent * event) (/home/dev/01-data/01-git/blender-git/blender/intern/ghost/intern/GHOST_EventManager.cpp:85)
GHOST_EventManager::dispatchEvent(GHOST_EventManager * const this) (/home/dev/01-data/01-git/blender-git/blender/intern/ghost/intern/GHOST_EventManager.cpp:95)
GHOST_EventManager::dispatchEvents(GHOST_EventManager * const this) (/home/dev/01-data/01-git/blender-git/blender/intern/ghost/intern/GHOST_EventManager.cpp:101)
GHOST_System::dispatchEvents(GHOST_System * const this) (/home/dev/01-data/01-git/blender-git/blender/intern/ghost/intern/GHOST_System.cpp:218)
GHOST_DispatchEvents(GHOST_SystemHandle systemhandle) (/home/dev/01-data/01-git/blender-git/blender/intern/ghost/intern/GHOST_C-api.cpp:277)
wm_window_process_events(const bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_window.c:1592)
WM_main(bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm.c:632)
main(int argc, const char ** argv) (/home/dev/01-data/01-git/blender-git/blender/source/creator/creator.c:522)
I can confirm the issue with the `startup.blend`. The `space_outliner->runtime` is `NULL` in `outliner_id_remap`, which results in a crash. ```lines outliner_id_remap(ScrArea * UNUSED_area, SpaceLink * slink, ID * old_id, ID * new_id) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/space_outliner/space_outliner.c:417) ED_spacedata_id_remap(struct ScrArea * area, struct SpaceLink * sl, ID * old_id, ID * new_id) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/util/ed_util.c:480) WM_main_remap_editor_id_reference(ID * old_id, ID * new_id) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:302) BKE_id_free_ex(Main * bmain, void * idv, int flag, const _Bool use_flag_from_idtag) (/home/dev/01-data/01-git/blender-git/blender/source/blender/blenkernel/intern/lib_id_delete.c:172) BKE_id_free(Main * bmain, void * idv) (/home/dev/01-data/01-git/blender-git/blender/source/blender/blenkernel/intern/lib_id_delete.c:203) BKE_workspace_layout_remove(Main * bmain, WorkSpace * workspace, WorkSpaceLayout * layout) (/home/dev/01-data/01-git/blender-git/blender/source/blender/blenkernel/intern/workspace.c:388) wm_window_close(bContext * C, wmWindowManager * wm, wmWindow * win) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_window.c:456) ghost_event_proc(GHOST_EventHandle evt, GHOST_TUserDataPtr C_void_ptr) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_window.c:1311) GHOST_CallbackEventConsumer::processEvent(GHOST_CallbackEventConsumer * const this, GHOST_IEvent * event) (/home/dev/01-data/01-git/blender-git/blender/intern/ghost/intern/GHOST_CallbackEventConsumer.cpp:41) GHOST_EventManager::dispatchEvent(GHOST_EventManager * const this, GHOST_IEvent * event) (/home/dev/01-data/01-git/blender-git/blender/intern/ghost/intern/GHOST_EventManager.cpp:85) GHOST_EventManager::dispatchEvent(GHOST_EventManager * const this) (/home/dev/01-data/01-git/blender-git/blender/intern/ghost/intern/GHOST_EventManager.cpp:95) GHOST_EventManager::dispatchEvents(GHOST_EventManager * const this) (/home/dev/01-data/01-git/blender-git/blender/intern/ghost/intern/GHOST_EventManager.cpp:101) GHOST_System::dispatchEvents(GHOST_System * const this) (/home/dev/01-data/01-git/blender-git/blender/intern/ghost/intern/GHOST_System.cpp:218) GHOST_DispatchEvents(GHOST_SystemHandle systemhandle) (/home/dev/01-data/01-git/blender-git/blender/intern/ghost/intern/GHOST_C-api.cpp:277) wm_window_process_events(const bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_window.c:1592) WM_main(bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm.c:632) main(int argc, const char ** argv) (/home/dev/01-data/01-git/blender-git/blender/source/creator/creator.c:522) ```

This issue was referenced by 52a6c4f34d

This issue was referenced by 52a6c4f34d4aba55bc179aa8df9d33883ea68ed3
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2020-12-05 14:57:32 +01:00

For reference, the commit that introduced the issue was 3daf28388b.

For reference, the commit that introduced the issue was 3daf28388b.
Author

Can confirm. Commit 52a6c4f34d fixes the issue even with the older startup.blend

Thanks for the quick fix. :)

Can confirm. Commit 52a6c4f34d4a fixes the issue even with the older startup.blend Thanks for the quick fix. :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83420
No description provided.